[project]
name = "btcusdttrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm==4.6.0",
    "numpy==2.5.0",
    "orjson==3.11.9",
    "pandas==3.0.3",
    "pyarrow==18.1.0",
    "python-dateutil==2.9.0.post0",
    "scikit-learn>=1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "tzdata==2026.2",
    "websockets==16.0",
]
